Fix mobile viewport issue

--- a/assets/style.css
+++ b/assets/style.css
@@ -106,8 +106,8 @@ button, .btn{
   font-weight: 600;
 }
 .color-primary{
-  background-color: #f4447c;
-  border-color: #f4447c;
+  background-color: #f22565;
+  border-color: #f22565;
   color: #ffffff;
 }
 .color-primary a{
